test/types/range/cast-assign-init/illegal-assigns.1-4.good
illegal-assigns.chpl:11: error: assigning to a range with idxType color from a range with idxType int(64) without an explicit cast
